fixed the css alignment and made Navbar fixed position
- community guides
- community info
- forum landing page (added fetch data code)
- ask questions (fixed the navbar linkings)

--- a/SpringBoot/src/main/resources/static/forumstyles.css
+++ b/SpringBoot/src/main/resources/static/forumstyles.css
@@ -4,7 +4,9 @@ header {
     /* color: #fff; */
     text-align: center;
     padding: 20px;
-    margin:  50px 100px 50px;
+    margin-top:  80px ;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 /* Style for navigation menu */
@@ -24,6 +26,13 @@ nav ul li a {
     text-decoration: none;
     /* color: #fff; */
 }
+.fixed-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; 
+}
+
 
 /* Style for main content sections */
 main {
@@ -35,10 +44,15 @@ footer {
     text-align: center;
     /* background-color: #333; */
     /* color: #fff; */
+    margin: 50px;
     padding: 10px;
 }
 
 /* style for community-guides */
+#earn-points{
+    margin: 50px 150px 50px;
+
+}
 table {
     border-collapse: collapse; /* Collapse borders into a single border line */
     width: 100%;
@@ -53,14 +67,27 @@ tr:not(:first-child) td {
     border-bottom: 1px solid #000; /* Add a 1px solid black border to non-header cells */
 }
 
-
-.container {
+/* style for community-info */
+.container_info {
     display: flex;
     justify-content: space-between;
 }
 
-.section {
+.section_info {
     flex: 1;
-    padding: 20px;
+    padding: 20px 40px;
     
+}
+
+
+/* style for forumlanding page */
+.card {
+    margin-left: 150px;
+    margin-right: 150px
+}
+
+/* style for ask question page */
+.container_question{
+    margin-left: 150px;
+    margin-right: 150px
 }
